# skew-detection

./: CMakeLists.txt
include/: SkewCorrector.h
lib/: image.h
scripts/: run.sh
src/: SkewCorrector.cpp  main.cpp
